force-app/main/default/objects/Legend_Item__mdt/Legend_Item__mdt.object-meta.xml
<CustomObject>
    <label>Legend Item</label>
    <pluralLabel>Legend Items</pluralLabel>
</CustomObject>