force-app/main/default/objects/Legend_Item__mdt/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>Beginning of density interval</description>
    <label>From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>