force-app/main/default/objects/Legend_Item__mdt/fields/Legend_Theme__c.field-meta.xml
<CustomField>
    <fullName>Legend_Theme__c</fullName>
    <label>Legend Theme</label>
    <referenceTo>Legend_Theme__mdt</referenceTo>
    <relationshipLabel>Legend Items</relationshipLabel>
    <relationshipName>Legend_Items</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>