force-app/main/default/objects/Legend_Item__mdt/fields/Legend_Type__c.field-meta.xml
<CustomField>
    <fullName>Legend_Type__c</fullName>
    <label>Legend Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
                <default>true</default>
                <label>Count</label>
            </value>
            <value>
                <fullName>Total AUM</fullName>
            </value>
            <value>
                <fullName>Strategy AUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>