force-app/main/default/objects/Legend_Item__mdt/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>End of density interval</description>
    <label>To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>